--- a/house.gov.by/eba9dcf24b9e436be091da41152b7bee4250a607.yml
+++ b/house.gov.by/eba9dcf24b9e436be091da41152b7bee4250a607.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Sat, 28 Oct 2017 11:52:22 GMT
+    - Sat, 28 Oct 2017 11:55:53 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=vcssgbhgggevcji857o9pt7sd0; path=/
+    - PHPSESSID=ncqtbh9uku3k38vu4dqeb3c6v2; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - EXPIRED
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 28 Oct 2017 11:52:23 GMT
+recorded_at: Sat, 28 Oct 2017 11:55:55 GMT
