--- a/house.gov.by/735daa1cb81e3ac118309362e8312e61674a46b1.yml
+++ b/house.gov.by/735daa1cb81e3ac118309362e8312e61674a46b1.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Sat, 28 Oct 2017 10:18:41 GMT
+    - Sat, 28 Oct 2017 12:04:00 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=stedo7v4cfdeua21jjhia0oo87; path=/
+    - PHPSESSID=m1l3tfhq5r3he3eud3mvbtvee3; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - EXPIRED
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 28 Oct 2017 10:18:41 GMT
+recorded_at: Sat, 28 Oct 2017 12:04:00 GMT
