--- a/house.gov.by/22695d2f418a8e9154938c2b12025487ab02d296.yml
+++ b/house.gov.by/22695d2f418a8e9154938c2b12025487ab02d296.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Sat, 28 Oct 2017 11:07:53 GMT
+    - Sat, 28 Oct 2017 12:09:43 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -29,8 +29,6 @@ response:
     - keep-alive
     Vary:
     - Accept-Encoding
-    Set-Cookie:
-    - PHPSESSID=q6fn9oebqbsvphrheav2agf3p3; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +40,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - MISS
+    - HIT
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 28 Oct 2017 11:07:54 GMT
+recorded_at: Sat, 28 Oct 2017 12:09:44 GMT
