--- a/house.gov.by/5cdfb777497bb1c107082ec4e25026842416f62c.yml
+++ b/house.gov.by/5cdfb777497bb1c107082ec4e25026842416f62c.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Sat, 28 Oct 2017 10:32:17 GMT
+    - Sat, 28 Oct 2017 12:12:58 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=gl0hlgie1g1c65sf4vbnb5t6i2; path=/
+    - PHPSESSID=7pactlu0fv529c24biq7f5iu71; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - MISS
+    - EXPIRED
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 28 Oct 2017 10:32:17 GMT
+recorded_at: Sat, 28 Oct 2017 12:12:58 GMT
