--- a/house.gov.by/600ce5976f7e793ea39fbe05930f91ad74511f7c.yml
+++ b/house.gov.by/600ce5976f7e793ea39fbe05930f91ad74511f7c.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Sat, 28 Oct 2017 11:24:09 GMT
+    - Sat, 28 Oct 2017 12:28:47 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -29,8 +29,6 @@ response:
     - keep-alive
     Vary:
     - Accept-Encoding
-    Set-Cookie:
-    - PHPSESSID=9lj72bg59g7phjd8tbvvttg762; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +40,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - MISS
+    - HIT
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 28 Oct 2017 11:24:10 GMT
+recorded_at: Sat, 28 Oct 2017 12:28:47 GMT
