--- a/house.gov.by/dc1c147be8c59110ac14e73189251cdb61ecb95c.yml
+++ b/house.gov.by/dc1c147be8c59110ac14e73189251cdb61ecb95c.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Sat, 28 Oct 2017 11:34:18 GMT
+    - Sat, 28 Oct 2017 12:32:08 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=ih5ds6hockh786rkm8ebmpfpt3; path=/
+    - PHPSESSID=qtbvot9nkhpb94ggogjsuqp084; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - MISS
+    - EXPIRED
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 28 Oct 2017 11:34:18 GMT
+recorded_at: Sat, 28 Oct 2017 12:32:08 GMT
