--- a/house.gov.by/c957607734c36b65ed912c3bd24f9437a6533d0a.yml
+++ b/house.gov.by/c957607734c36b65ed912c3bd24f9437a6533d0a.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Sat, 28 Oct 2017 11:26:25 GMT
+    - Sat, 28 Oct 2017 12:48:06 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=ud8lsfubd7dnc6vu83q5tui3p1; path=/
+    - PHPSESSID=185rjiis5kk1gr4k6b6h2evei0; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - MISS
+    - EXPIRED
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 28 Oct 2017 11:26:26 GMT
+recorded_at: Sat, 28 Oct 2017 12:48:07 GMT
