--- a/house.gov.by/bb638de07eb37a6a331149842af102c46009e290.yml
+++ b/house.gov.by/bb638de07eb37a6a331149842af102c46009e290.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Sat, 28 Oct 2017 10:40:20 GMT
+    - Sat, 28 Oct 2017 12:53:56 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=mc8b66dlr7epgu4b0e4d1q05m7; path=/
+    - PHPSESSID=auh8esh5ch6b2qon64cgihkta1; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - EXPIRED
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 28 Oct 2017 10:40:21 GMT
+recorded_at: Sat, 28 Oct 2017 12:53:56 GMT
