--- a/house.gov.by/9eb274f9499e59ea06363c7ab477a87120d8e451.yml
+++ b/house.gov.by/9eb274f9499e59ea06363c7ab477a87120d8e451.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Sat, 28 Oct 2017 11:18:25 GMT
+    - Sat, 28 Oct 2017 13:06:12 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=jjftar3bsbrbalmhljej8ceea5; path=/
+    - PHPSESSID=2d07psi9r0vsm8s18h05r94bn5; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - MISS
+    - EXPIRED
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 28 Oct 2017 11:18:26 GMT
+recorded_at: Sat, 28 Oct 2017 13:06:13 GMT
