--- a/house.gov.by/5bdaea91a3c0d6e18ed92838051a80b32621108b.yml
+++ b/house.gov.by/5bdaea91a3c0d6e18ed92838051a80b32621108b.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Sat, 28 Oct 2017 10:56:30 GMT
+    - Sat, 28 Oct 2017 13:07:21 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=jhogrb72t2ppepg9fe22d5t7k1; path=/
+    - PHPSESSID=q2mrootcrfe1pr2n0r5oeep6h3; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - MISS
+    - EXPIRED
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 28 Oct 2017 10:56:32 GMT
+recorded_at: Sat, 28 Oct 2017 13:07:22 GMT
