--- a/house.gov.by/3d07e35244747efde8f8b9a3aa7e65d29bf715ed.yml
+++ b/house.gov.by/3d07e35244747efde8f8b9a3aa7e65d29bf715ed.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Sat, 28 Oct 2017 10:25:33 GMT
+    - Sat, 28 Oct 2017 13:09:17 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=dn9klnbcl1h44icahl02u7n411; path=/
+    - PHPSESSID=2sjlv5mi65b15njfglu4g40ia5; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - MISS
+    - EXPIRED
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 28 Oct 2017 10:25:35 GMT
+recorded_at: Sat, 28 Oct 2017 13:09:19 GMT
