--- a/house.gov.by/d873b2a79688823a0d023468255a348ebe0af01e.yml
+++ b/house.gov.by/d873b2a79688823a0d023468255a348ebe0af01e.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Sat, 28 Oct 2017 12:29:17 GMT
+    - Sat, 28 Oct 2017 13:27:33 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -29,6 +29,8 @@ response:
     - keep-alive
     Vary:
     - Accept-Encoding
+    Set-Cookie:
+    - PHPSESSID=hl2ga3ms3he9g1j5ji651knss7; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -40,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - HIT
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 28 Oct 2017 12:29:17 GMT
+recorded_at: Sat, 28 Oct 2017 13:27:34 GMT
