--- a/house.gov.by/24f50492dfbf46c42fb96a17f622baf2498cbe23.yml
+++ b/house.gov.by/24f50492dfbf46c42fb96a17f622baf2498cbe23.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Sat, 28 Oct 2017 12:30:18 GMT
+    - Sat, 28 Oct 2017 13:40:55 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=bpu7jn4gbb5fj4m3ij4mtlsoi7; path=/
+    - PHPSESSID=chd3bu3rup752ruboe60b8dt64; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - EXPIRED
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 28 Oct 2017 12:30:18 GMT
+recorded_at: Sat, 28 Oct 2017 13:40:56 GMT
