--- a/house.gov.by/46dfedc0d01f097096bf05cbbb3067cf518ec95c.yml
+++ b/house.gov.by/46dfedc0d01f097096bf05cbbb3067cf518ec95c.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Sat, 28 Oct 2017 13:23:48 GMT
+    - Sat, 28 Oct 2017 13:44:01 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=j1osuro77sgldsabf357vqc3s7; path=/
+    - PHPSESSID=g455bqpebujaaufru0v2g2n545; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - EXPIRED
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 28 Oct 2017 13:23:49 GMT
+recorded_at: Sat, 28 Oct 2017 13:44:01 GMT
