--- a/house.gov.by/5c6c1df8deff67757e87013192ccd6b1f02ac39e.yml
+++ b/house.gov.by/5c6c1df8deff67757e87013192ccd6b1f02ac39e.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Sat, 28 Oct 2017 12:11:32 GMT
+    - Sat, 28 Oct 2017 13:47:39 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=kjj6de0514bsg123b4uj5f4o15; path=/
+    - PHPSESSID=n2ne2ema6rggfk4d1i09v9pm76; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - MISS
+    - EXPIRED
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 28 Oct 2017 12:11:33 GMT
+recorded_at: Sat, 28 Oct 2017 13:47:40 GMT
