--- a/house.gov.by/89ff0502719991830a86af426f1d021d7bacf111.yml
+++ b/house.gov.by/89ff0502719991830a86af426f1d021d7bacf111.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Sat, 28 Oct 2017 12:29:42 GMT
+    - Sat, 28 Oct 2017 13:50:19 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=eacf4ipegsv385nfv3pka8db34; path=/
+    - PHPSESSID=54gjmbl4sunbb104r0be36md34; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - EXPIRED
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 28 Oct 2017 12:29:43 GMT
+recorded_at: Sat, 28 Oct 2017 13:50:20 GMT
