--- a/house.gov.by/2dd5adec3a457e2a3b0fef3f0889fe04d1870e5d.yml
+++ b/house.gov.by/2dd5adec3a457e2a3b0fef3f0889fe04d1870e5d.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Sat, 28 Oct 2017 11:52:47 GMT
+    - Sat, 28 Oct 2017 13:50:45 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=94h10m37r0ia4487op8ei1e1r5; path=/
+    - PHPSESSID=em1m32m94fktb2s8t2vn8o5l66; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - EXPIRED
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 28 Oct 2017 11:52:48 GMT
+recorded_at: Sat, 28 Oct 2017 13:50:46 GMT
