--- a/house.gov.by/f046772073a7c8c34da7ca236e04b15050649385.yml
+++ b/house.gov.by/f046772073a7c8c34da7ca236e04b15050649385.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Sat, 28 Oct 2017 13:01:52 GMT
+    - Sat, 28 Oct 2017 14:02:52 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -29,8 +29,6 @@ response:
     - keep-alive
     Vary:
     - Accept-Encoding
-    Set-Cookie:
-    - PHPSESSID=2f6q8fv0msimtgtt2g744cf6s7; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +40,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - MISS
+    - HIT
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 28 Oct 2017 13:01:54 GMT
+recorded_at: Sat, 28 Oct 2017 14:02:52 GMT
