--- a/house.gov.by/517994db117c9e65235905611143905242402edd.yml
+++ b/house.gov.by/517994db117c9e65235905611143905242402edd.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Sat, 28 Oct 2017 12:13:57 GMT
+    - Sat, 28 Oct 2017 14:05:45 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=poqja8q56fbmv0lfi5k7v1iac2; path=/
+    - PHPSESSID=8fvsdtnbdokvhd1vj8eovc3s03; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - MISS
+    - EXPIRED
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 28 Oct 2017 12:13:58 GMT
+recorded_at: Sat, 28 Oct 2017 14:05:46 GMT
