--- a/house.gov.by/daaa73805e9fe148233c94c1671cd7492cf1b742.yml
+++ b/house.gov.by/daaa73805e9fe148233c94c1671cd7492cf1b742.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Sat, 28 Oct 2017 12:30:55 GMT
+    - Sat, 28 Oct 2017 14:14:54 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=vu2osdsd9f622o71vm7ohj7lr5; path=/
+    - PHPSESSID=2fic948kv4khteadbqbpaadd97; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - EXPIRED
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 28 Oct 2017 12:30:56 GMT
+recorded_at: Sat, 28 Oct 2017 14:14:55 GMT
