--- a/house.gov.by/8e5f8de4b34941007456395437e0ed8be2cf2bc9.yml
+++ b/house.gov.by/8e5f8de4b34941007456395437e0ed8be2cf2bc9.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Sat, 28 Oct 2017 12:24:01 GMT
+    - Sat, 28 Oct 2017 14:20:49 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=ntnjjskmr61u92kl4irl1cm4m6; path=/
+    - PHPSESSID=2nsocgriv0glmt3vsbf9demar0; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - MISS
+    - EXPIRED
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 28 Oct 2017 12:24:02 GMT
+recorded_at: Sat, 28 Oct 2017 14:20:50 GMT
