--- a/house.gov.by/ad5699a85dda4bc170ae62bd42a4a439ac006a13.yml
+++ b/house.gov.by/ad5699a85dda4bc170ae62bd42a4a439ac006a13.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Sat, 28 Oct 2017 12:50:21 GMT
+    - Sat, 28 Oct 2017 14:32:38 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -29,6 +29,8 @@ response:
     - keep-alive
     Vary:
     - Accept-Encoding
+    Set-Cookie:
+    - PHPSESSID=k5uveibqgpbemicmuvvgbk0ua1; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -40,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - HIT
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 28 Oct 2017 12:50:21 GMT
+recorded_at: Sat, 28 Oct 2017 14:32:38 GMT
